--- a/.htaccess
+++ b/.htaccess
@@ -1,4 +1,4 @@
-DirectoryIndex public/index.php
+# DirectoryIndex public/index.php
 
 <IfModule mod_rewrite.c>
     <IfModule mod_negotiation.c>
@@ -19,5 +19,7 @@ DirectoryIndex public/index.php
     # Send Requests To Front Controller...
     RewriteCond %{REQUEST_FILENAME} !-d
     RewriteCond %{REQUEST_FILENAME} !-f
-    RewriteRule ^ index.php [L]
+    # RewriteRule ^ public/index.php [L]
+    RewriteRule ^$ public/ [L]
+    RewriteRule ((?s).*) public/$1 [L]
 </IfModule>
