--- a/.htaccess
+++ b/.htaccess
@@ -20,6 +20,6 @@ DirectoryIndex public/index.php
     RewriteCond %{REQUEST_FILENAME} !-d
     RewriteCond %{REQUEST_FILENAME} !-f
     RewriteRule ^ public/index.php [L]
-    RewriteRule ^$ public/ [L]
-    RewriteRule ((?s).*) public/$1 [L]
+    # RewriteRule ^$ public/ [L]
+    # RewriteRule ((?s).*) public/$1 [L]
 </IfModule>
