--- a/.htaccess
+++ b/.htaccess
@@ -21,5 +21,5 @@ DirectoryIndex public/index.php
     RewriteCond %{REQUEST_FILENAME} !-f
     RewriteRule ^ public/index.php [L]
     # RewriteRule ^$ public/ [L]
-    RewriteRule ((?s).*) public/$1 [L]
+    # RewriteRule ((?s).*) public/$1 [L]
 </IfModule>
