--- a/.htaccess
+++ b/.htaccess
@@ -21,6 +21,6 @@ DirectoryIndex public/index.php
     RewriteCond %{REQUEST_FILENAME} !-f
     # RewriteRule ^ public/index.php [L]
     # RewriteRule ^ public/index.php [L]
-    # RewriteRule ^$ public/ [L]
+    RewriteRule ^$ public/ [L]
     RewriteRule ((?s).*) public/$1 [L]
 </IfModule>
